# solana-dev

./: .gitmodules  README.md
.github/workflows/: update-submodules.yml
client/: package.json
client/scripts/: generate-crates.mjs
client/src/components/Editor/Monaco/languages/rust/rust-analyzer/: rust-analyzer.ts
client/src/constants/: project.ts
client/src/frameworks/native/: from.ts
client/src/pages/ide/Global/: Global.tsx
client/src/tutorials/: README.md  tutorials.ts
client/src/utils/pg/: server.ts
client/src/utils/pg/client/: client.ts
client/src/utils/pg/explorer/: explorer.ts
client/src/utils/pg/tx/: tx.ts
server/: Cargo.toml  Dockerfile
server/programs/: Cargo.toml
server/src/: config.rs  program.rs
vscode/: README.md  package.json
vscode/src/: extension.ts
vscode/src/constants/: project.ts
wasm/: README.md
wasm/anchor-cli/: Cargo.toml
wasm/pkgs/playnet/: package.json
wasm/pkgs/rustfmt/: package.json
wasm/playnet/: Cargo.toml
wasm/rust-analyzer/: Cargo.toml
wasm/rust-analyzer/src/: world_state.rs
wasm/rustfmt/rustfmt-wasm/: Cargo.toml
wasm/seahorse-compile/: Cargo.toml
wasm/solana-cli/: Cargo.toml
wasm/solana-client/: Cargo.toml  README.md
wasm/spl-token-cli/: Cargo.toml
wasm/sugar-cli/: Cargo.toml
wasm/utils/solana-clap-v3-utils/: Cargo.toml
wasm/utils/solana-clap-v3-utils/src/: fee_payer.rs  offline.rs
wasm/utils/solana-cli-config/: Cargo.toml
wasm/utils/solana-cli-output/: Cargo.toml
wasm/utils/solana-extra/: Cargo.toml  README.md
wasm/utils/solana-playground-utils/: Cargo.toml
