[package]
name = "rustfmt-wasm"
version = "0.99.4"
description = "Rust formatter for WASM"
authors = ["NxPKG <iconmamundentist@gmail.com>"]
repository = "https://github.com/nxpkg/solana-dev"
license = "Apache-2.0"
homepage = "https://beta.solana-dev.io"
keywords = ["rustfmt", "wasm", "rust", "format", "rustwasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
rustfmt-nightly = { path = "../rustfmt-nightly" }
wasm-bindgen = "=0.2.30"
