[package]
name = "solana-playground-utils-wasm"
version = "0.1.0"
description = "WASM utils for Solana Playground."
authors = ["NxPKG <iconmamundentist@gmail.com>"]
repository = "https://github.com/nxpkg/solana-dev"
license = "Apache-2.0"
homepage = "https://beta.solana-dev.io"
edition = "2021"
keywords = ["solana", "playground", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["js"]
js = []

[dependencies]
wasm-bindgen = "*"